--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/http-client": "4.3.*",
+        "symfony/var-dumper": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
